Разметила до формочки

--- a/index.html
+++ b/index.html
@@ -5,8 +5,64 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="img/index-logo.svg" width="368" height="153" alt="Логотип Седона»">
+        </a>
+          <ul class="site-navigation">
+            <li><a href="info.html">Информация</a></li>
+            <li><a href="gallery.html">Фото и видео</a></li>
+            <li><a href="map.html">Карта штата</a></li>
+            <li><a href="hotel .html">Гостиницы</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main class="conteiner">
+      <img href="src="img/index-background.svg" width="368" height="153" alt="Welcome to the gorgeous">"
+      <h1 class="visually-hidden">Седона — небольшой городок в Аризоне,
+          заслуживающий большего!</h1>
+      <section class="features">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <ul class="features-list">
+            <li class="feature-item">
+              <h3>Настоящий городок</h3>
+              <p>Седона-не аттракцион для туристов,там течет своя жизнь</p>
+            <li class="feature-item">
+              <h3>Там есть мост дьявола</h3>
+              <p>Да, по нему можно пройтись! Если конечно вы осмелитесь</p>
+            <li class="feature-item">
+              <h3>Небольшая площадь</h3>
+              <p>Все достопримечательности находятся очень близко</p>
+            </li>
+            <li class="feature-item">
+             <h3>Красивая дорога</h3>
+             <p>хать в Седону из Лас-Вегаса совсем
+                не скучно!</p>
+           </li>
+           <li class="feature-item">
+           <h3>Мало туристов</h3>
+           <P>Большинство едет в Гранд Каньон и толпится там</P>
+          </li>
+        </ul>
+      </section>
+      <section class="services">
+        <h2>Услуги</h2>
+        <ul class="services-list"></ul>
+          <li class="services-item">
+            <h3>Жилье</h3>
+            <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="services-item">
+            <h3>Еда</h3>
+            <p>Всегда заказывайте фрменный бургер, вы не разочаруетсь!</p>
+          </li>
+          <li class="services-item">
+              <h3>Сувениры</h3>
+              <p>Не только китайского, но и местного прозводства!</p>
+            </li>
+      </ul>
+      </section>
+    </main>
   </body>
 </html>
