--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </nav>
     </header>
     <main class="conteiner">
-      <img href="src="img/index-background.svg" width="368" height="153" alt="Welcome to the gorgeous">"
+      <img scr="img/index-background.svg" width="368" height="153" alt="Welcome to the gorgeous">
       <h1 class="visually-hidden">Седона — небольшой городок в Аризоне,
           заслуживающий большего!</h1>
       <section class="features">
@@ -28,16 +28,18 @@
             <li class="feature-item">
               <h3>Настоящий городок</h3>
               <p>Седона-не аттракцион для туристов,там течет своя жизнь</p>
-            <li class="feature-item">
+            </li>
+              <li class="feature-item">
               <h3>Там есть мост дьявола</h3>
               <p>Да, по нему можно пройтись! Если конечно вы осмелитесь</p>
-            <li class="feature-item">
+              </li>
+              <li class="feature-item">
               <h3>Небольшая площадь</h3>
               <p>Все достопримечательности находятся очень близко</p>
             </li>
             <li class="feature-item">
              <h3>Красивая дорога</h3>
-             <p>хать в Седону из Лас-Вегаса совсем
+             <p>Ехать в Седону из Лас-Вегаса совсем
                 не скучно!</p>
            </li>
            <li class="feature-item">
@@ -63,6 +65,31 @@
             </li>
       </ul>
       </section>
+      <section>
+        <h2>Заинтересовались?</h3>
+        <p>Укажите предполагаемые даты поездки, 
+            и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      </section>
+      <section class="search">
+          <h2>Поиск гостиницы в Седоне</h2>
+          <!-- Здесь будет форма -->
+      </section>
     </main>
+    <footer class="main-footer">
+      <div class="footer-socia">
+        <ul>
+          <li><a class="social-button" href="#">Твиттер</a></li>
+          <li></li><a class="social-button" href="#">Фейсбук</a></li>
+          <li></li><a class="social-button" href="#">YouTube</a></li>
+        </ul>
+      </div>
+      <p class="developer-logo">
+          <b>Website by</b> 
+          <img src="" alt="html academy">
+      </p>
+    </footer>
+    <section class="modal modal-map">
+        <span class="modal-close">x</span>
+      </section>
   </body>
 </html>
