--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
             <li><a href="info.html">Информация</a></li>
             <li><a href="gallery.html">Фото и видео</a></li>
             <li><a href="map.html">Карта штата</a></li>
-            <li><a href="hotel .html">Гостиницы</a></li>
+            <li><a href="hotel.html">Гостиницы</a></li>
         </ul>
       </nav>
     </header>
     <main class="conteiner">
-      <img scr="img/index-background.svg" width="368" height="153" alt="Welcome to the gorgeous">
+      <img src="img/index-background.svg" width="368" height="153" alt="Welcome to the gorgeous">
       <h1 class="visually-hidden">Седона — небольшой городок в Аризоне,
           заслуживающий большего!</h1>
       <section class="features">
@@ -50,7 +50,7 @@
       </section>
       <section class="services">
         <h2>Услуги</h2>
-        <ul class="services-list"></ul>
+        <ul class="services-list">
           <li class="services-item">
             <h3>Жилье</h3>
             <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
@@ -66,9 +66,8 @@
       </ul>
       </section>
       <section>
-        <h2>Заинтересовались?</h3>
-        <p>Укажите предполагаемые даты поездки, 
-            и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <h2>Заинтересовались?</h2>
+        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
       </section>
       <section class="search">
           <h2>Поиск гостиницы в Седоне</h2>
@@ -76,19 +75,21 @@
       </section>
     </main>
     <footer class="main-footer">
-      <div class="footer-socia">
+      <div class="footer-social">
         <ul>
           <li><a class="social-button" href="#">Твиттер</a></li>
-          <li></li><a class="social-button" href="#">Фейсбук</a></li>
-          <li></li><a class="social-button" href="#">YouTube</a></li>
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">YouTube</a></li>
         </ul>
       </div>
       <p class="developer-logo">
-          <b>Website by</b> 
-          <img src="" alt="html academy">
+          <p>Website by</p> 
+          <img src="img/index-logo-htmlacademy.svg" width="368" height="153" alt="html academy">
       </p>
     </footer>
-    <section class="modal modal-map">
+    <!-- #VISITSEDONA во что обернуть, к чему отнести? -->
+    <section class="modal-map">
+      <!-- Здесь карта или картинка фон? -->
         <span class="modal-close">x</span>
       </section>
   </body>
