Работа над ошибками

--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
   </head>
   <body>
     <header class="main-header">
+        <a class="main-header-logo"></a>
+        <img src="img/index-logo.svg" width="368" height="153" alt="Логотип Седона»">
       <nav class="main-navigation">
-        <a class="main-header-logo">
-          <img src="img/index-logo.svg" width="368" height="153" alt="Логотип Седона»">
-        </a>
-          <ul class="site-navigation">
-            <li><a href="info.html">Информация</a></li>
-            <li><a href="gallery.html">Фото и видео</a></li>
-            <li><a href="map.html">Карта штата</a></li>
-            <li><a href="hotel.html">Гостиницы</a></li>
+        <ul class="site-navigation">
+          <li><a href="info.html">Информация</a></li>
+          <li><a href="gallery.html">Фото и видео</a></li>
+          <li><a href="map.html">Карта штата</a></li>
+          <li><a href="hotel.html">Гостиницы</a></li>
         </ul>
       </nav>
     </header>
@@ -24,7 +23,7 @@
           заслуживающий большего!</h1>
       <section class="features">
         <h2 class="visually-hidden">Преимущества</h2>
-        <ul class="features-list">
+        <ol class="features-list">
             <li class="feature-item">
               <h3>Настоящий городок</h3>
               <p>Седона-не аттракцион для туристов,там течет своя жизнь</p>
@@ -46,7 +45,7 @@
            <h3>Мало туристов</h3>
            <P>Большинство едет в Гранд Каньон и толпится там</P>
           </li>
-        </ul>
+        </ol>
       </section>
       <section class="services">
         <h2>Услуги</h2>
@@ -77,6 +76,7 @@
     <footer class="main-footer">
       <div class="footer-social">
         <ul>
+          <li><a class="social-button"  href="#">#VISITSEDONA</li></i>
           <li><a class="social-button" href="#">Твиттер</a></li>
           <li><a class="social-button" href="#">Фейсбук</a></li>
           <li><a class="social-button" href="#">YouTube</a></li>
@@ -86,11 +86,7 @@
           <p>Website by</p> 
           <img src="img/index-logo-htmlacademy.svg" width="368" height="153" alt="html academy">
       </p>
+      <img src="img/index-modal-map.svg" width="368" height="153" alt="modal-close">
     </footer>
-    <!-- #VISITSEDONA во что обернуть, к чему отнести? -->
-    <section class="modal-map">
-      <!-- Здесь карта или картинка фон? -->
-        <span class="modal-close">x</span>
-      </section>
   </body>
 </html>
