--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </ul>
       </div>
       <p class="developer-logo">
-          <p>Website by</p> 
+          <span>Website by</span> 
           <img src="img/index-logo-htmlacademy.svg" width="368" height="153" alt="html academy">
       </p>
       <img src="img/index-modal-map.svg" width="368" height="153" alt="modal-close">
