Работа над ошибками

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   </head>
   <body>
     <header class="main-header">
-        <a class="main-header-logo"></a>
-        <img src="img/index-logo.svg" width="368" height="153" alt="Логотип Седона»">
+        <a class="main-header-logo"><img src="img/index-logo.svg" width="368" height="153" alt="Логотип Седона»"></a>
       <nav class="main-navigation">
         <ul class="site-navigation">
           <li><a href="info.html">Информация</a></li>
@@ -43,7 +42,7 @@
            </li>
            <li class="feature-item">
            <h3>Мало туристов</h3>
-           <P>Большинство едет в Гранд Каньон и толпится там</P>
+           <p>Большинство едет в Гранд Каньон и толпится там</p>
           </li>
         </ol>
       </section>
