--- a/Search.html
+++ b/Search.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="main-header">
-        <a class="main-header-logo"></a>
+        <a class="main-header-logo"><img src="img/index-logo.svg" width="368" height="153" alt="Логотип Седона»"></a>
             <img src="img/index-logo.svg" width="368" height="153" alt="Логотип Седона»">
               <nav class="main-navigation">
                 <ul class="site-navigation">
@@ -23,30 +23,30 @@
                 <li class="amara">
                     <h2>AMIRA RESORT & SPA</h2>
                     <img src="img/index-amara.svg" width="150" height="100" alt="amara">
-                    <p>гостиница</p>
+                    <p>Гостиница</p>
                     <p>от 4000 р.</p>
-                    <button>Подробнее</button>
-                    <button>Забронировать</button>
+                    <a>Подробнее</a>
+                    <a>Забронировать</a>
                     <img src="img/index-star.svg" width="80" height="50" alt="rating">
                     <p>рейтинг: 8.3</p>
                 </li>
                 <li class="desert">
                     <h2>DESERT QUAIL INN</h2>
                     <img src="img/index-desert.svg" width="150" height="100" alt="desert">
-                    <p>мотель</p>
+                    <p>Мотель</p>
                     <p>от 3000 р.</p>
-                    <button>Подробнее</button>
-                    <button>Забронировать</button>
+                    <a>Подробнее</a>
+                    <a>Забронировать</a>
                     <img src="img/index-star.svg" width="80" height="50" alt="rating">
                     <p>рейтинг: 8.9</p>
                 </li>
                 <li class="villas">
                     <h2>VILLAS AT POCO DIABLO</h2>
                     <img src="img/index-villas.svg" width="150" height="100" alt="villas">
-                    <p>апартаменты</p>
+                    <p>Апартаменты</p>
                     <p>от 2000 р.</p>
-                    <button>Подробнее</button>
-                    <button>Забронировать</button>
+                    <a>Подробнее</a>
+                    <a>Забронировать</a>
                     <img src="img/index-star.svg" width="80" height="50" alt="rating">
                     <p>рейтинг: 9.2</p>
                 </li>
@@ -56,14 +56,14 @@
     <footer class="main-footer">
             <div class="footer-social">
               <ul>
-                <li><a class="social-button"  href="#">#VISITSEDONA</li></i>
+                <li><a class="social-button" href="#">#VISITSEDONA</a></li>
                 <li><a class="social-button" href="#">Твиттер</a></li>
                 <li><a class="social-button" href="#">Фейсбук</a></li>
                 <li><a class="social-button" href="#">YouTube</a></li>
               </ul>
             </div>
             <p class="developer-logo">
-                <p>Website by</p> 
+                <span> >Website by</span> > 
                 <img src="img/index-logo-htmlacademy.svg" width="368" height="153" alt="html academy">
             </p>
             <img src="img/index-modal-map.svg" width="368" height="153" alt="modal-close">
