Исправила ошибки и добавила картинки

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="main-header">
-        <a class="main-header-logo"><img src="img/index-logo.svg" width="368" height="153" alt="Логотип Седона»"></a>
+        <a class="main-header-logo"><img src="img/logo-sedona.svg" width="150" height="100" alt="Логотип Седона»"></a>
       <nav class="main-navigation">
         <ul class="site-navigation">
           <li><a href="info.html">Информация</a></li>
@@ -17,7 +17,7 @@
       </nav>
     </header>
     <main class="conteiner">
-      <img src="img/index-background.svg" width="368" height="153" alt="Welcome to the gorgeous">
+      <img src="img/intro-welcome.svg" width="550" height="350" alt="Welcome to the gorgeous">
       <h1 class="visually-hidden">Седона — небольшой городок в Аризоне,
           заслуживающий большего!</h1>
       <section class="features">
@@ -75,7 +75,7 @@
     <footer class="main-footer">
       <div class="footer-social">
         <ul>
-          <li><a class="social-button"  href="#">#VISITSEDONA</li></i>
+          <li><a class="social-button"  href="#">#VISITSEDONA</a></li>
           <li><a class="social-button" href="#">Твиттер</a></li>
           <li><a class="social-button" href="#">Фейсбук</a></li>
           <li><a class="social-button" href="#">YouTube</a></li>
@@ -83,7 +83,7 @@
       </div>
       <p class="developer-logo">
           <span>Website by</span> 
-          <img src="img/index-logo-htmlacademy.svg" width="368" height="153" alt="html academy">
+          <img src="img/logo-htmlacademy.svg" width="100" height="50" alt="html academy">
       </p>
       <img src="img/index-modal-map.svg" width="368" height="153" alt="modal-close">
     </footer>
