--- a/catalog.html
+++ b/catalog.html
@@ -63,7 +63,7 @@
               </ul>
             </div>
             <p class="developer-logo">
-                <span> >Website by</span> > 
+                <span> >Website by</span>
                 <img src="img/index-logo-htmlacademy.svg" width="368" height="153" alt="html academy">
             </p>
             <img src="img/index-modal-map.svg" width="368" height="153" alt="modal-close">
