--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="main-header">
-        <a class="main-header-logo"><img src="img/index-logo.svg" width="368" height="153" alt="Логотип Седона»"></a>
+        <a class="main-header-logo"><img src="img/logo-sedona.svg" width="150" height="100" alt="Логотип Седона»"></a>
             <img src="img/index-logo.svg" width="368" height="153" alt="Логотип Седона»">
               <nav class="main-navigation">
                 <ul class="site-navigation">
@@ -17,7 +17,7 @@
                 </ul>
               </nav>
             </header>
-            <main class="conteiner">
+            <main class="container">
         <section>
             <ul>
                 <li class="amara">
@@ -54,14 +54,30 @@
         </section>
     </main>
     <footer class="main-footer">
-            <div class="footer-social">
-              <ul>
-                <li><a class="social-button" href="#">#VISITSEDONA</a></li>
-                <li><a class="social-button" href="#">Твиттер</a></li>
-                <li><a class="social-button" href="#">Фейсбук</a></li>
-                <li><a class="social-button" href="#">YouTube</a></li>
-              </ul>
-            </div>
+        <div class="footer-social">
+          <ul>
+            <li>
+              <a class="social-button"  href="#">
+                #VISITSEDONA
+              </a>
+            </li>
+            <li>
+              <a class="social-button" href="#">
+                <img src="img/twitter.svg" alt="Твиттер">
+              </a>
+            </li>
+            <li>
+              <a class="social-button" href="#">
+                <img src="img/fb-icon.svg" alt="Фейсбук">
+              </a>
+            </li>
+            <li>
+              <a class="social-button" href="#">
+                <img src="img/youtube.svg" alt="YouTube">
+              </a>
+            </li>
+          </ul>
+        </div>
             <p class="developer-logo">
                 <span> >Website by</span>
                 <img src="img/index-logo-htmlacademy.svg" width="368" height="153" alt="html academy">
