--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </ul>
       </nav>
     </header>
-    <main class="conteiner">
+    <main class="container">
       <img src="img/intro-welcome.svg" width="550" height="350" alt="Welcome to the gorgeous">
       <h1 class="visually-hidden">Седона — небольшой городок в Аризоне,
           заслуживающий большего!</h1>
@@ -75,17 +75,32 @@
     <footer class="main-footer">
       <div class="footer-social">
         <ul>
-          <li><a class="social-button"  href="#">#VISITSEDONA</a></li>
-          <li><a class="social-button" href="#">Твиттер</a></li>
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">YouTube</a></li>
+          <li>
+            <a class="social-button"  href="#">
+              #VISITSEDONA
+            </a>
+          </li>
+          <li>
+            <a class="social-button" href="#">
+              <img src="img/twitter.svg" alt="Твиттер">
+            </a>
+          </li>
+          <li>
+            <a class="social-button" href="#">
+              <img src="img/fb-icon.svg" alt="Фейсбук">
+            </a>
+          </li>
+          <li>
+            <a class="social-button" href="#">
+              <img src="img/youtube.svg" alt="YouTube">
+            </a>
+          </li>
         </ul>
       </div>
       <p class="developer-logo">
           <span>Website by</span> 
           <img src="img/logo-htmlacademy.svg" width="100" height="50" alt="html academy">
       </p>
-      <img src="img/index-modal-map.svg" width="368" height="153" alt="modal-close">
     </footer>
   </body>
 </html>
