Добавила изображения в каталог

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,6 @@
   <body>
     <header class="main-header">
         <a class="main-header-logo"><img src="img/logo-sedona.svg" width="150" height="100" alt="Логотип Седона»"></a>
-            <img src="img/index-logo.svg" width="368" height="153" alt="Логотип Седона»">
               <nav class="main-navigation">
                 <ul class="site-navigation">
                   <li><a href="info.html">Информация</a></li>
@@ -22,7 +21,7 @@
             <ul>
                 <li class="amara">
                     <h2>AMIRA RESORT & SPA</h2>
-                    <img src="img/index-amara.svg" width="150" height="100" alt="amara">
+                    <img src="img/index-amara.jpg" width="150" height="100" alt="amara">
                     <p>Гостиница</p>
                     <p>от 4000 р.</p>
                     <a>Подробнее</a>
@@ -32,7 +31,7 @@
                 </li>
                 <li class="desert">
                     <h2>DESERT QUAIL INN</h2>
-                    <img src="img/index-desert.svg" width="150" height="100" alt="desert">
+                    <img src="img/index-desert.jpg" width="150" height="100" alt="desert">
                     <p>Мотель</p>
                     <p>от 3000 р.</p>
                     <a>Подробнее</a>
@@ -42,7 +41,7 @@
                 </li>
                 <li class="villas">
                     <h2>VILLAS AT POCO DIABLO</h2>
-                    <img src="img/index-villas.svg" width="150" height="100" alt="villas">
+                    <img src="img/index-villas.jpg" width="150" height="100" alt="villas">
                     <p>Апартаменты</p>
                     <p>от 2000 р.</p>
                     <a>Подробнее</a>
