Логотип HTML в catalog

--- a/catalog.html
+++ b/catalog.html
@@ -78,8 +78,8 @@
           </ul>
         </div>
             <p class="developer-logo">
-                <span> >Website by</span>
-                <img src="img/index-logo-htmlacademy.svg" width="368" height="153" alt="html academy">
+                <span>Website by</span>
+                <img src="img/logo-htmlacademy.svg" width="100" height="50" alt="html academy">
             </p>
             <img src="img/index-modal-map.svg" width="368" height="153" alt="modal-close">
           </footer>
