Добавила изображение звезд рейтинга

--- a/catalog.html
+++ b/catalog.html
@@ -26,7 +26,11 @@
                     <p>от 4000 р.</p>
                     <a>Подробнее</a>
                     <a>Забронировать</a>
-                    <img src="img/index-star.svg" width="80" height="50" alt="rating">
+                    <img src="img/star.svg" width="15" height="15" alt="rating">
+                    <img src="img/star.svg" width="15" height="15" alt="rating">
+                    <img src="img/star.svg" width="15" height="15" alt="rating">
+                    <img src="img/star.svg" width="15" height="15" alt="rating">
+                    <img src="img/star.svg" width="15" height="15" alt="rating">
                     <p>рейтинг: 8.3</p>
                 </li>
                 <li class="desert">
@@ -36,7 +40,9 @@
                     <p>от 3000 р.</p>
                     <a>Подробнее</a>
                     <a>Забронировать</a>
-                    <img src="img/index-star.svg" width="80" height="50" alt="rating">
+                    <img src="img/star.svg" width="15" height="15" alt="rating">
+                    <img src="img/star.svg" width="15" height="15" alt="rating">
+                    <img src="img/star.svg" width="15" height="15" alt="rating">
                     <p>рейтинг: 8.9</p>
                 </li>
                 <li class="villas">
@@ -46,7 +52,8 @@
                     <p>от 2000 р.</p>
                     <a>Подробнее</a>
                     <a>Забронировать</a>
-                    <img src="img/index-star.svg" width="80" height="50" alt="rating">
+                    <img src="img/star.svg" width="15" height="15" alt="rating">
+                    <img src="img/star.svg" width="15" height="15" alt="rating">
                     <p>рейтинг: 9.2</p>
                 </li>
             </ul>
