--- a/index.html
+++ b/index.html
@@ -69,8 +69,29 @@
         <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
       </section>
       <section class="search">
-          <h2>Поиск гостиницы в Седоне</h2>
           <!-- Здесь будет форма -->
+          <div class="modal-form modal-search">
+            <div class="modal-search__header">
+                <h2>Поиск гостиницы в Седоне</h2>
+            </div>
+            <div class="modal-search__body">
+              <form>
+                <label for="checkin-date">Дата заезда:</label>
+                <input type="date" id="checkin-date">
+                <br>
+                <label for="chekout-date">Дата выезда:</label>
+                <input type="date" id="chekout-date">
+                <br>
+                <label for="adults">Взрослые:</label>
+                <input type="range" id="adults">
+                <br>
+                <label for="children">Дети:</label>
+                <input type="range" id="children">
+                <br>
+                <button>Найти</button>
+              </form>
+            </div>
+          </div>
       </section>
     </main>
     <footer class="main-footer">
