--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
                 <input type="date" id="chekout-date">
                 <br>
                 <label for="adults">Взрослые:</label>
-                <input type="range" id="adults">
+                <input type="number" id="adults">
                 <br>
                 <label for="children">Дети:</label>
-                <input type="range" id="children">
+                <input type="number" id="children">
                 <br>
                 <button>Найти</button>
               </form>
