--- a/index.html
+++ b/index.html
@@ -69,24 +69,23 @@
         <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
       </section>
       <section class="search">
-          <!-- Здесь будет форма -->
           <div class="modal-form modal-search">
             <div class="modal-search__header">
                 <h2>Поиск гостиницы в Седоне</h2>
             </div>
             <div class="modal-search__body">
-              <form>
+              <form action="" method="GET">
                 <label for="checkin-date">Дата заезда:</label>
-                <input type="date" id="checkin-date">
+                <input type="date" id="checkin-date" required>
                 <br>
                 <label for="chekout-date">Дата выезда:</label>
-                <input type="date" id="chekout-date">
+                <input type="date" id="chekout-date" required>
                 <br>
                 <label for="adults">Взрослые:</label>
-                <input type="number" id="adults">
+                <input type="number" id="adults" value="1" required>
                 <br>
                 <label for="children">Дети:</label>
-                <input type="number" id="children">
+                <input type="number" id="children" value="0">
                 <br>
                 <button>Найти</button>
               </form>
