--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <label for="children">Дети:</label>
                 <input type="number" id="children" value="0">
                 <br>
-                <button>Найти</button>
+                <button type="submit">Найти</button>
               </form>
             </div>
           </div>
