--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
             <div class="modal-search__body">
               <form action="" method="GET">
                 <label for="checkin-date">Дата заезда:</label>
-                <input type="date" id="checkin-date" required>
+                <input type="date" name="checkin-date" id="checkin-date" required>
                 <br>
                 <label for="chekout-date">Дата выезда:</label>
-                <input type="date" id="chekout-date" required>
+                <input type="date" name="chekout-date" id="chekout-date" required>
                 <br>
                 <label for="adults">Взрослые:</label>
-                <input type="number" id="adults" value="1" required>
+                <input type="number" name="adults" id="adults" value="1" required>
                 <br>
                 <label for="children">Дети:</label>
-                <input type="number" id="children" value="0">
+                <input type="number" name="children" id="children" value="0">
                 <br>
                 <button type="submit">Найти</button>
               </form>
