Сделала логотип ссылкой

--- a/catalog.html
+++ b/catalog.html
@@ -84,7 +84,8 @@
         </div>
             <p class="developer-logo">
                 <span>Website by</span>
-                <img src="img/logo-htmlacademy.svg" width="100" height="50" alt="html academy">
+                <a href="https://htmlacademy.ru/">
+                  <img src="img/logo-htmlacademy.svg" width="100" height="50" alt="html academy"></a>
             </p>
           </footer>
   </body>
