Работа над замечаниями
1. Добавила ссылка в раздел "Гостиницы" которая ведет на страницу с каталогом.
2. Добавила ссылку в логотип на странице каталога, которая ведет на главную.
3. Добавила в alt весь текст с картинки
4. Добавила в футере ссылку, которая ведет на страницу интенсива.
5. Выравнила код

--- a/catalog.html
+++ b/catalog.html
@@ -1,92 +1,92 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
-    <header class="main-header">
-        <a class="main-header-logo"><img src="img/logo-sedona.svg" width="150" height="100" alt="Логотип Седона»"></a>
-              <nav class="main-navigation">
-                <ul class="site-navigation">
-                  <li><a href="info.html">Информация</a></li>
-                  <li><a href="gallery.html">Фото и видео</a></li>
-                  <li><a href="map.html">Карта штата</a></li>
-                  <li><a href="hotel.html">Гостиницы</a></li>
-                </ul>
-              </nav>
-            </header>
-            <main class="container">
-        <section>
-            <ul>
-                <li class="amara">
-                    <h2>AMIRA RESORT & SPA</h2>
-                    <img src="img/index-amara.jpg" width="150" height="100" alt="amara">
-                    <p>Гостиница</p>
-                    <p>от 4000 р.</p>
-                    <a>Подробнее</a>
-                    <a>Забронировать</a>
-                    <img src="img/star.svg" width="15" height="15" alt="rating">
-                    <img src="img/star.svg" width="15" height="15" alt="rating">
-                    <img src="img/star.svg" width="15" height="15" alt="rating">
-                    <img src="img/star.svg" width="15" height="15" alt="rating">
-                    <img src="img/star.svg" width="15" height="15" alt="rating">
-                    <p>рейтинг: 8.3</p>
-                </li>
-                <li class="desert">
-                    <h2>DESERT QUAIL INN</h2>
-                    <img src="img/index-desert.jpg" width="150" height="100" alt="desert">
-                    <p>Мотель</p>
-                    <p>от 3000 р.</p>
-                    <a>Подробнее</a>
-                    <a>Забронировать</a>
-                    <img src="img/star.svg" width="15" height="15" alt="rating">
-                    <img src="img/star.svg" width="15" height="15" alt="rating">
-                    <img src="img/star.svg" width="15" height="15" alt="rating">
-                    <p>рейтинг: 8.9</p>
-                </li>
-                <li class="villas">
-                    <h2>VILLAS AT POCO DIABLO</h2>
-                    <img src="img/index-villas.jpg" width="150" height="100" alt="villas">
-                    <p>Апартаменты</p>
-                    <p>от 2000 р.</p>
-                    <a>Подробнее</a>
-                    <a>Забронировать</a>
-                    <img src="img/star.svg" width="15" height="15" alt="rating">
-                    <img src="img/star.svg" width="15" height="15" alt="rating">
-                    <p>рейтинг: 9.2</p>
-                </li>
-            </ul>
-        </section>
-    </main>
-    <footer class="main-footer">
-       <a class="social-button"  href="#">
-          #VISITSEDONA
-       </a>
-       <div class="footer-social">
-          <ul>
-            <li>
-              <a class="social-button" href="#">
-                <img src="img/twitter.svg" alt="Твиттер">
-              </a>
-            </li>
-            <li>
-              <a class="social-button" href="#">
-                <img src="img/fb-icon.svg" alt="Фейсбук">
-              </a>
-            </li>
-            <li>
-              <a class="social-button" href="#">
-                <img src="img/youtube.svg" alt="YouTube">
-              </a>
-            </li>
-          </ul>
-        </div>
-            <p class="developer-logo">
-                <span>Website by</span>
-                <a href="https://htmlacademy.ru/">
-                  <img src="img/logo-htmlacademy.svg" width="100" height="50" alt="html academy"></a>
-            </p>
-          </footer>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+</head>
+<body>
+  <header class="main-header">
+    <a class="main-header-logo" href="index.html"><img src="img/logo-sedona.svg" width="150" height="100" alt="Логотип Седона»"></a>
+    <nav class="main-navigation">
+      <ul class="site-navigation">
+        <li><a href="info.html">Информация</a></li>
+        <li><a href="gallery.html">Фото и видео</a></li>
+        <li><a href="map.html">Карта штата</a></li>
+        <li><a href="hotel.html">Гостиницы</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main class="container">
+    <section>
+      <ul>
+        <li class="amara">
+          <h2>AMIRA RESORT & SPA</h2>
+          <img src="img/index-amara.jpg" width="150" height="100" alt="amara">
+          <p>Гостиница</p>
+          <p>от 4000 р.</p>
+          <a>Подробнее</a>
+          <a>Забронировать</a>
+          <img src="img/star.svg" width="15" height="15" alt="rating">
+          <img src="img/star.svg" width="15" height="15" alt="rating">
+          <img src="img/star.svg" width="15" height="15" alt="rating">
+          <img src="img/star.svg" width="15" height="15" alt="rating">
+          <img src="img/star.svg" width="15" height="15" alt="rating">
+          <p>рейтинг: 8.3</p>
+        </li>
+        <li class="desert">
+          <h2>DESERT QUAIL INN</h2>
+          <img src="img/index-desert.jpg" width="150" height="100" alt="desert">
+          <p>Мотель</p>
+          <p>от 3000 р.</p>
+          <a>Подробнее</a>
+          <a>Забронировать</a>
+          <img src="img/star.svg" width="15" height="15" alt="rating">
+          <img src="img/star.svg" width="15" height="15" alt="rating">
+          <img src="img/star.svg" width="15" height="15" alt="rating">
+          <p>рейтинг: 8.9</p>
+        </li>
+        <li class="villas">
+          <h2>VILLAS AT POCO DIABLO</h2>
+          <img src="img/index-villas.jpg" width="150" height="100" alt="villas">
+          <p>Апартаменты</p>
+          <p>от 2000 р.</p>
+          <a>Подробнее</a>
+          <a>Забронировать</a>
+          <img src="img/star.svg" width="15" height="15" alt="rating">
+          <img src="img/star.svg" width="15" height="15" alt="rating">
+          <p>рейтинг: 9.2</p>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer class="main-footer">
+    <a class="social-button"  href="#">
+      #VISITSEDONA
+    </a>
+    <div class="footer-social">
+      <ul>
+        <li>
+          <a class="social-button" href="#">
+            <img src="img/twitter.svg" alt="Твиттер">
+          </a>
+        </li>
+        <li>
+          <a class="social-button" href="#">
+            <img src="img/fb-icon.svg" alt="Фейсбук">
+          </a>
+        </li>
+        <li>
+          <a class="social-button" href="#">
+            <img src="img/youtube.svg" alt="YouTube">
+          </a>
+        </li>
+      </ul>
+    </div>
+    <p class="developer-logo">
+      <span>Website by</span>
+      <a href="https://htmlacademy.ru/intensive/htmlcss">
+        <img src="img/logo-htmlacademy.svg" width="100" height="50" alt="html academy"></a>
+      </p>
+    </footer>
   </body>
-</html>
+  </html>
