--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <section class="search">
         <div class="modal-form modal-search">
           <div class="modal-search__header">
-            <h2>Поиск гостиницы в Седоне</h2>
+            <button>Поиск гостиницы в Седоне</button>
           </div>
           <div class="modal-search__body">
             <form action="" method="GET">
