--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
   <header class="main-header">
+    <a class="main-header-logo" href="index.html">
+      <img src="img/logo-sedona.svg" width="140" height="70" alt="Логотип Седона»">
+    </a>
     <nav class="main-navigation">
       <ul class="site-navigation">
         <li><a href="info.html">Информация</a></li>
@@ -20,7 +23,7 @@
   </header>
   <main class="container">
     <div class="welcome">
-      <img src="img/intro-welcome.svg" width="550" height="350" alt="Welcome to the gorgeous Sedona Because the Grand Canyon sucks">
+      <img src="img/intro-welcome.svg" width="459" height="353" alt="Welcome to the gorgeous Sedona Because the Grand Canyon sucks">
     </div>
     <h1 class="sedona-town">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
     <section class="features">
