--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li class="feature-item1">
           <h3>Там есть мост дьявола</h3>
           <p>Да, по нему можно пройтись! Если конечно вы осмелитесь</p>
-          <img src="img/layer-5.jpg" width="800" height="256" alt="Там есть мост дьявола. Да, по нему можно пройтись! Если конечно вы осмелитесь.>
+          <img src="img/layer-5.jpg" width="800" height="256" alt="Там есть мост дьявола. Да, по нему можно пройтись! Если конечно вы осмелитесь.">
         </li>
         </ol>
       </div>
@@ -87,7 +87,7 @@
             <button>Поиск гостиницы в Седоне</button>
           </div>
           <div class="modal-search__body">
-            <form action="" method="GET">
+            <form action="https://echo.htmlacademy.ru/" method="POST">
               <label for="checkin-date">Дата заезда:</label>
               <input type="date" name="checkin-date" id="checkin-date" required>
               <label for="chekout-date">Дата выезда:</label>
