--- a/catalog.html
+++ b/catalog.html
@@ -20,7 +20,7 @@
     </nav>
   </header>
   <main class="container">
-    <section>
+    <section class="housing">
       <ul>
         <li class="amara">
           <h2>AMIRA RESORT & SPA</h2>
@@ -81,7 +81,7 @@
     </section>
   </main>
   <footer class="main-footer">
-    <a class="social-button"  href="#">
+    <a class="visitsedona"  href="#">
       #VISITSEDONA
     </a>
     <div class="footer-social">
